array.island.Island.scala.error
Compilation error:
Island:2: error: identifier expected but integer literal found.
var x = num[0]
            ^Island:3: error: ']' expected but ';' found.
var compteur = 0
^Island:6: error: identifier expected but integer literal found.
    x=num[i-1]
            ^Island:7: error: ']' expected but ';' found.
    if (x<num[i]) {
^